Added cNavigatorWindow class and draft of navigation window

--- a/mandelbulber2/qt/dock_navigation.ui
+++ b/mandelbulber2/qt/dock_navigation.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>264</width>
-    <height>931</height>
+    <width>271</width>
+    <height>1001</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,6 +37,34 @@
      <property name="spacing">
       <number>2</number>
      </property>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pushButton_stop">
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Terminate rendering&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string>STOP</string>
+       </property>
+       <property name="icon">
+        <iconset theme="process-stop" resource="icons.qrc">
+         <normaloff>:/system/icons/process-stop.svg</normaloff>:/system/icons/process-stop.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="pushButton_render">
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Start rendering of image based on actual settings&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string>RENDER</string>
+       </property>
+       <property name="icon">
+        <iconset theme="applications-graphics" resource="icons.qrc">
+         <normaloff>:/system/icons/applications-graphics.svg</normaloff>:/system/icons/applications-graphics.svg</iconset>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <widget class="QPushButton" name="pushButton_undo">
        <property name="toolTip">
@@ -65,31 +93,10 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_stop">
-       <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Terminate rendering&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
+     <item row="2" column="0" colspan="2">
+      <widget class="QPushButton" name="pushButton_openNavigator">
        <property name="text">
-        <string>STOP</string>
-       </property>
-       <property name="icon">
-        <iconset theme="process-stop" resource="icons.qrc">
-         <normaloff>:/system/icons/process-stop.svg</normaloff>:/system/icons/process-stop.svg</iconset>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton_render">
-       <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Start rendering of image based on actual settings&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-       <property name="text">
-        <string>RENDER</string>
-       </property>
-       <property name="icon">
-        <iconset theme="applications-graphics" resource="icons.qrc">
-         <normaloff>:/system/icons/applications-graphics.svg</normaloff>:/system/icons/applications-graphics.svg</iconset>
+        <string>Open new navigator</string>
        </property>
       </widget>
      </item>
@@ -218,8 +225,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>244</width>
-        <height>864</height>
+        <width>263</width>
+        <height>830</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_coordinates">
