May need updating.   Issue #873 reinstate glass material (version 2.17), version 2.25 was when it became Gold.

--- a/mandelbulber2/formula/ui/transf_difs_grid_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_grid_v2.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_difs_grid_v2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -481,7 +481,7 @@
         <item row="1" column="0">
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
           <property name="text">
-           <string notr="true">fabs</string>
+           <string notr="true">abs()</string>
           </property>
          </widget>
         </item>
